[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-spatial-weights"
version = "0.1.0"
description = "Build graph-based spatial weight matrices from street networks and administrative districts."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Yulin Song" }
]
dependencies = [
  "geopandas>=0.14",
  "networkx>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "libpysal>=4.9",
  "esda>=2.5",
  "spreg>=1.4",
  "scikit-learn>=1.3",
  "matplotlib-scalebar>=0.8",
  "shapely>=2.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.4"
]

[project.scripts]
graph-spatial-weights = "graph_spatial_weights.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
